releases/azure/core/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    app: istio-gateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-istio
  namespace: internal
spec:
  hosts:
  - "istio.wush.site"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: nginx.internal.svc.cluster.local
        port:
          number: 80
